# resonite-wasm-experiments

./: .gitignore  Cargo.toml  Directory.Build.props  LibFrooxEngine.json  LibFrooxEngine.schema.json  README.md  wasm-experiments.sln
Buildtools/: Buildtools.csproj  Program.cs  Repro.cs
Examples/: package.json
Examples/AssemblyScript/: package-lock.json
Examples/Rust/: Cargo.toml  README.md
Mod.WasmCompanion/: Mod.WasmCompanion.csproj  WasmInspector.cs  WorkerInspectorPatch.cs
Mod.WasmCompanion/Locale/: en.json
Plugin.Wasm/: Assets.cs  ExportType.cs  FodyWeavers.xml  FodyWeavers.xsd  FunctionSignature.cs  Plugin.Wasm.csproj  StoreData.cs  WasmEngineProvider.cs  WasmLinkerProvider.cs
Plugin.Wasm.ProtoFluxBindings/: Plugin.Wasm.ProtoFluxBindings.csproj
Plugin.Wasm/Components/: StaticWebAssemblyModule.cs  StructEditor.cs  TestingList.cs  TextWebAssemblyModule.cs  WebAssemblyInstance.cs
Plugin.Wasm/GenericCollections/: CustomStructEditorAttribute.cs  NodeInputsStruct.cs  NodeOutputsStruct.cs  SyncElementListStruct.cs  SyncElementStruct.cs  SyncFieldStruct.cs
Plugin.Wasm/Properties/: AssemblyInfo.cs
Plugin.Wasm/ProtoFlux/: BaseWebAssemblyNode.cs  CallFunction.cs  ExportName.cs  GenericInput.cs  GenericOutput.cs  GetExport.cs  IWebAssemblyNode.cs  LoadFile.cs  TestGlobal.cs  WebAssemblyAction.cs  WebAssemblyFunction.cs
bindings/rust/wasm-weaver/: Cargo.toml
bindings/rust/wasm-weaver/src/: args.rs  binaryen.rs  cargo.rs  main.rs  parse.rs  type_allocator.rs  weaver.rs
bindings/rust/wasm-weaver/src/weaver/: indices.rs  table-slab.wasm  table_slab.rs
(+33 files in other folders)
