[package]
name = "wasm-weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
wasm-encoder = { version = "0.240.0", features = ["wasmparser"] }
wasmparser = "0.240.0"
